remove carousel captions on small screens, fixed grid of "who we are" thumbnails

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -90,4 +90,8 @@ footer {
     header.carousel .carousel {
         height: 70%;
     }
+
+    .carousel-caption {
+        display: none;
+    }
 }
